# api/urls.py
@@ -1,5 +1,5 @@
 from django.urls import path
-from .views import HelloView, RegisterView, LoginView, MeView, LogoutView
+from .views import HelloView, RegisterView, LoginView, MeView, LogoutView, ChatMessageListCreateView
 
 urlpatterns = [
     path("hello/", HelloView.as_view(), name="hello"),
@@ -7,4 +7,5 @@ urlpatterns = [
     path("auth/login/", LoginView.as_view(), name="auth-login"),
     path("auth/me/", MeView.as_view(), name="auth-me"),
     path("auth/logout/", LogoutView.as_view(), name="auth-logout"),
+    path("chat/messages/", ChatMessageListCreateView.as_view(), name="chat-messages"),
 ]
